fix alignment of loading element

--- a/src/channel.build.web/client/views/loader/loader.css
+++ b/src/channel.build.web/client/views/loader/loader.css
@@ -1,5 +1,7 @@
 .loader-container {
   width: 250px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
